Created javascript Conway's Game of Life that will be used for the background

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Alex Caswell</title>
+	<link rel="stylesheet" href="style.css">
+	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet'>
+	<script src="script.js"></script>
+</head>
+<body onload="main();">
+<!-- 	<div id="header">
+		Alex Caswell
+	</div>
+	<div id="block">
+		<div id="intro_text">
+			Hire me please<br/>
+			I do good things<br/>
+			Please
+		</div>
+		<img id="intro_photo" src="me.jpg">
+	</div>
+	<div id="block">
+		<div id="education_text">
+			<h1>Education</h1>
+			<p>University of Massachusetts Amherst</p>
+		</div>
+	</div> -->
+
+	<canvas id="background" onclick="onClick(event);">
+		<img src="neat.png"/>
+	</canvas>
+</body>
+</html>
